--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
-<h1>Welcome to My Website</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>My Sample Page</title>
+</head>
+<body>
+
+  <h1>Welcome to My Website</h1>
   <p>This is a sample HTML page created for practice.</p>
 
   <h2>About Me</h2>
